--- a/modules/index/ui/common/copyright.html
+++ b/modules/index/ui/common/copyright.html
@@ -1,3 +1,4 @@
 <%! func Copyright(w io.Writer,config *UIConfig) error %>
-<%% import "github.com/xirtah/gopa-spider/core/version" %%>
-<%= config.SiteName %> ©2017, Powered by <a target="_blank" href="https://github.com/xirtah/gopa" >GOPA</a> v<%= version.GetVersion() %> #<a title="<%= version.GetLastCommitLog() %>" href="https://github.com/xirtah/gopa-spider/commit/<%= version.GetLastCommitHash() %>"><%= version.GetLastCommitHash() %></a>.
+<!-- TODO: FIX Copyright -->
+<!-- <%% import "github.com/xirtah/gopa-spider/core/version" %%>
+<%= config.SiteName %> ©2017, Powered by <a target="_blank" href="https://github.com/xirtah/gopa" >GOPA</a> v<%= version.GetVersion() %> #<a title="<%= version.GetLastCommitLog() %>" href="https://github.com/xirtah/gopa-spider/commit/<%= version.GetLastCommitHash() %>"><%= version.GetLastCommitHash() %></a>. -->
