Updated to match changes made to the task object in the gopa-framework. Key is now an interface{} hence the type assertion to string

--- a/modules/index/ui/handler/search.html
+++ b/modules/index/ui/handler/search.html
@@ -103,7 +103,7 @@
                                 key:=bkt.Key
                                 c:=bkt.DocCount
                                 %>
-                                <li><a href=<%==fmt.Sprintf("?q=%s&filter=%s|%v&from=0",q,common.GetBucketKey(k),util.UrlEncode(key)) %> ><%= key %><count>(<%= c %>)</count></a></li>
+                                <li><a href=<%==fmt.Sprintf("?q=%s&filter=%s|%v&from=0",q,common.GetBucketKey(k),util.UrlEncode(key.(string))) %> ><%= key %><count>(<%= c %>)</count></a></li>
 
                                 <% } %>
                                             </ul>
